Image resizing Images that are too big (dimensions), gets scaled to defined constrains. Issue: --- Solution: --- Note: Done exercise p. 802

--- a/sample_app/app/assets/stylesheets/custom.scss
+++ b/sample_app/app/assets/stylesheets/custom.scss
@@ -254,9 +254,9 @@ p {
 /*img {
   display: none;
 }*/
-img {
-  width: 70px;
-}
+//img {
+//  width: 70px;
+//}
 
 /* footer */
 
